<resources>
    <string name="app_name">1Temiz - Dry Cleaner Service App</string>


    <string name="hint_email">Enter your email</string>
    <string name="email">EMAIL</string>
    <string name="next">Next</string>
    <string name="next_password_screen">Log in</string>
    <string name="field_required">This field is required</string>
    <string name="mail_error">You entered an incorrect mail</string>

    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="hint_password">Enter your password</string>
    <string name="password_error">This field is required</string>

    <!--Main activity-->
    <string name="main_menu_title">MAIN MENU</string>


    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="order_history_menu_on_time_title">ON TIME:</string>
    <string name="order_history_menu_late_tile">LATE:</string>

    <string name="earnings">Earnings</string>
    <string name="main_menu_balance_title">BALANCE:</string>


    <string name="rating_comment_menu_comment_and_rating">Comment and Rating</string>

    <string name="rating_comment_menu_rating_title">RATING:</string>
    <string name="rating">Rating:</string>
    <string name="rating_comment_menu_comments_title">COMMENTS:</string>
    <string name="comments">Comments:</string>
    <string name="comments_no_comments">Comments: No comments</string>
    <string name="menu_statostocs_title">Statistics</string>
    <string name="menu_earnings_title">Earnings</string>
    <string name="settings">Settings</string>
    <string name="settings_title">SETTINGS</string>
    <string name="phone_number">phone number</string>
    <string name="language">Language</string>
    <string name="password_label">Password</string>

    <string name="auth_button_log_out">Log Out</string>

    <string name="current_balance">Current balance</string>

    <string name="customer_order_title">Customer:</string>


    <string name="district_order_title">District:</string>
    <string name="order_order_title">Order:</string>

    <string name="today">Today</string>
    <string name="order_details_title">ORDER DETAILS</string>
    <string name="order_details_button_cancel_drop_off">Cancel Drop Off</string>
    <string name="order_details_paid">Paid</string>
    <string name="order_details_button_add_items">Add items</string>
    <string name="order_details_title_drop_off_time_title">DROP-OFF TIME</string>
    <string name="order_details_title_drop_off_date_title">DROP-OFF DATE</string>
    <string name="order_details_title_pick_up_time_title">PICK-UP TIME</string>
    <string name="order_details_title_pick_up_date_and_time_">PICK-UP DATE AND TIME</string>
    <string name="order_details_title_drop_off_date_and_time_">DROP-OFF DATE AND TIME</string>

    <string name="order_details_title_pick_up_status">PICK-UP STATUS</string>
    <string name="pick_up_status">PICK-UP</string>
    <string name="order_details_title_drop_off_status">DROP-OFF STATUS</string>

    <string name="order_details_title_payment_method">PAYMENT METHOD</string>
    <string name="order_details_title_discount">DISCOUNT</string>

    <string name="order_details_title_customer_title">CUSTOMER</string>
    <string name="order_details_basket_title">BASKET</string>
    <string name="order_details_price_title">PRICE</string>
    <string name="order_details_status_title">STATUS</string>
    <string name="order_details_notes_title">ADDRESS NOTES</string>
    <string name="order_details_order_notes_title">ORDER NOTES</string>
    <string name="order_details_type_title">ORDER TYPE</string>
    <string name="address_title">ADDRESS</string>

    <string name="courier_label">COURIER</string>

    <string name="order_number">Order #</string>

    <string name="order_details_button_cancel">Cancel</string>
    <string name="button_save">Save</string>

    <string name="order_details_item">item</string>
    <string name="order_details_items">items</string>

    <string name="tr_lyra">₺</string>

    <string name="tab_week">This week</string>
    <string name="tab_month">This month</string>
    <string name="tab_all">All</string>

    <string name="ok">OK</string>
    <string name="sms_verification_correctly">Are you sure you entered SMS verification correctly?</string>
    <string name="resend">Resend SMS again</string>
    <string name="verification_label">VERIFICATION</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="information">We sent you a SMS verification code.\n
Please enter it below:</string>
    <string name="delete">Delete</string>

    <string name="reason">Reason:</string>
    <string name="note">Note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="are_you_sure_reject">Are you sure you want to reject this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="warn_select_reason">Please select the reason</string>
    <string name="select_reason">Select reason</string>


    <string name="shop_name">OFFICIAL COMPANY NAME</string>

    <string name="warn_courier_unverified">You cannot choose courier with unverified phone number</string>

    <string name="rating_last_year">Rating for the last 12 months</string>

    <string name="accepted_orders">Total received Orders</string>
    <string name="completed_orders">Completed</string>
    <string name="incompleted_orders">Incompleted</string>
    <string name="percentage">Percentage</string>

    <string name="success_rate">Success Rate</string>

    <string name="cancelled_count">Cancelled / Order Count</string>
    <string name="late_count">Late / Job Count</string>
    <string name="ontime_count">On Time / Job Count</string>

    <string name="change_language">CHANGE LANGUAGE</string>


    <string name="pick_up_is_not_realized">Pick up is not realized</string>
    <string name="drop_off_is_not_realized">Drop off is not completed</string>
    <string name="late_status">Late</string>
    <string name="ontime_status">On time</string>

    <string name="pending_payment">Pending</string>
    <string name="no_order_note">No order note</string>

    <string name="no_orders">There isn\’t any current order yet</string>

    <string name="change_name">CHANGE SHOP NAME</string>
    <string name="official_name">SHOP NAME</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="change_phone">CHANGE PHONE NUMBER</string>

    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>

    <string name="this_month">This Month</string>
    <string name="last_month">Last month</string>

    <string name="this_year">This Year</string>


    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="click_here">Click here</string>
    <string name="current_password_is_wrong">Current password that you entered is wrong</string>
    <string name="new_pass_not_match">New passwords does not match</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>

    <string name="forgot_explain">*Please enter your email, we will send you instructions for resetting your password</string>

    <string name="settings_shopinfo">Shop Information</string>
    <string name="settings_working_hours">Working Hours</string>
    <string name="settings_capacity">Capacity</string>
    <string name="settings_holidays">Holidays</string>
    <string name="settings_supplier_area">Supplier Area</string>
    <string name="settings_item_pricing">Item Pricing</string>

    <string name="settings_capacity_explained">Choose time periods when your capacity is full</string>
    <string name="capacity_full">Capacity is full</string>

    <string name="changes_saved">Changes were saved successfully</string>
    <string name="title_activity_add_items">AddItemsActivity</string>


    <!--Add item fragment-->
    <string name="add_items_title">ADD ITEMS</string>
    <string name="add_item_formatter_item" formatted="false">%s%s item</string>
    <string name="add_item_formatter_items" formatted="false">%s%s items</string>
    <string name="add_item_format_total_price">Total price: </string>
    <string name="add_item_error_message_have_not_any_items">You have not added any items yet.</string>
    <string name="add_item_no_product_placeholder">Dry cleaner is not serving any product in this category</string>
    <string name="add_item_no_items_yet_placeholder">There is not items yet</string>
    <string name="add_item_select_one">please select at least one item</string>

    <!--Basket fragment-->
    <string name="basket_title_details">BASKET DETAILS</string>
    <string name="basket_button_add_order_to_orders">Add Items to Order</string>
    <string name="basket_button_add_new_items">Add New Items</string>
    <string name="basket_no_data_place_holder">Basket is empty</string>

    <!--Search fragment-->
    <string name="search_title_details">Search</string>
    <string name="search_button_add_new_items">Add New Items</string>
    <string name="search_no_data_place_holder">Search is empty</string>

    <!--Item product-->
    <string name="title_remove">X</string>

    <string name="cancel_order_title_are_you_sure">Are you sure?</string>
    <string name="cancel_order_title_want">Are you sure you want to cancel this order?</string>
    <string name="cancel_order_button_yes">Yes</string>
    <string name="cancel_order_button_no">No</string>
    <string name="cancel_order_title">Cancel Order</string>
    <string name="cancel_order_message_select_reason">Please select reason why you canceling the order.</string>
    <string name="cancel_order_button_other">Other</string>
    <string name="items"> Items</string>
    <string name="ironing"> (ironing)</string>
    <string name="gift"> (gift)</string>
    <string name="registration_not_finished">Registration of this account was not finished</string>
    <string name="close_all">Close all</string>
    <string name="open_all">Open all</string>
    <string name="holidays">HOLIDAYS</string>
    <string name="date">Date</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="total">TOTAL</string>


    <string name="item_pricing_title">ITEM PRICING</string>
    <string name="minimum_price">Minimum price: </string>
    <string name="recommended_price">Recommended price: </string>

    <string name="choose_at_least_one_item">Choose at least one item for the basket</string>

    <string name="add_product">Add Product(s)</string>

    <string name="more_info">More info</string>

</resources>
