<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/hint_password"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonNextPass"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/editTextPass"
        android:layout_alignRight="@+id/editTextPass"
        android:layout_below="@+id/editTextPass"
        android:background="@color/blue"
        android:text="@string/next"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/enter_your_password" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextPass"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"/>

</RelativeLayout>
