<?xml version="1.0" encoding="utf-8"?>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/linLayOrderRow"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/iv_clock"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/svg_ic_clock_blue_24dp" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/TextFieldOrderTime"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/iv_clock"
                android:layout_toRightOf="@+id/iv_clock"
                tools:text="16:00 - 18:00"
                />

            <TextView
                android:id="@+id/tv_date"
                style="@style/CharcoalSmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_time"
                android:layout_toRightOf="@+id/tv_time"
                android:gravity="end"
                tools:text="Today"
                />
        </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp">




        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_customer_title"
                style="@style/Charcoal40XSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/customer_order_title" />

            <TextView
                android:id="@+id/tv_customer"
                style="@style/CharcoalXSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:text="Addie Campbell" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linlay1"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_district_title"
                style="@style/Charcoal40XSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/district_order_title" />

            <TextView
                android:id="@+id/tv_district"
                style="@style/CharcoalXSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                tools:text="Beykoz" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay2"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_order_title"
                style="@style/Charcoal40XSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_order_title" />

            <TextView
                android:id="@+id/tv_order"
                style="@style/CharcoalXSmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:text="#39564" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay3"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_add_products"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:background="@drawable/button_rounded_pink"
                android:gravity="center"
                android:text="@string/add_product"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textSize="12dp" />

            <Button
                android:id="@+id/button_more_info"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_rounded_empty_pink"
                android:gravity="center"
                android:text="@string/more_info"
                android:textAllCaps="false"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay5"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >
        <LinearLayout
            android:id="@+id/linlay7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
           >
            <Button
                android:id="@+id/button_accept"
                android:layout_width="62dp"
                android:layout_height="22dp"
                android:layout_marginRight="4dp"
                android:textSize="12dp"
                android:background="@drawable/button_rounded_empty_pink"
                android:gravity="center"
                android:text="@string/accept"/>

            <Button
                android:id="@+id/button_decline"
                android:layout_width="62dp"
                android:layout_height="22dp"
                android:gravity="center"
                android:background="@drawable/button_rounded_pink"
                android:text="@string/decline"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
            <com.digitaldna.supplier.widgets.OrderStatusView
                android:id="@+id/os_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/button_decline"
            android:text="(27:35)"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>
    </LinearLayout>


