<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_inside_title"
                style="@style/Toolbar.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:text="@string/settings_title"
                android:textAllCaps="true"
                />

            <ImageView
                android:id="@+id/iv_toolbar_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="16dp"
                android:src="@drawable/svg_ic_menu_black_24dp" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_container"
            android:layout_margin="12dp"
            android:id="@+id/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="16dp"

                android:paddingTop="16dp"
                >

                <TextView
                    android:id="@+id/tv_full_name"
                    style="@style/CharcoalMediumText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="12dp"

                    android:textAlignment="center"
                    android:text="@string/settings_capacity_explained"/>


                <ExpandableListView
                    android:id="@+id/lvExpandCapacity"
                    android:layout_height="400dp"
                    android:layout_width="match_parent"/>

                <Button
                    android:id="@+id/b_sign_out"
                    style="@style/TemizButton"
                    android:layout_width="match_parent"
                    android:layout_margin="12dp"
                    android:text="@string/auth_button_log_out"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>